# tezos-packaging-stable

./: README.md  binaries.json  flake.nix  shell.nix  tezos-release.nix
.buildkite/: generate-tags-pipeline.sh  pipeline-for-tags.yml  pipeline-raw.yml  pipeline-test-bigsur.yml  update-binaries.sh
.github/: CONTRIBUTING.md
.reuse/: dep5
Formula/: tezos-accuser-011-PtHangz2.rb  tezos-accuser-012-Psithaca.rb  tezos-accuser-Proxford.rb  tezos-accuser-PsQuebec.rb  tezos-accuser-PsRiotum.rb  tezos-accuser-PtKathma.rb  tezos-accuser-PtLimaPt.rb  tezos-accuser-PtMumbai.rb  tezos-accuser-PtNairob.rb  (+40 more)
docker/: README.md  build-deps.sh  docker-static-build.sh  docker-tezos-packages.py  fetch_tezos_sources.py  octez-executables  pyproject.toml  update-binaries.sh
docker/package/: Dockerfile-fedora  Dockerfile-ubuntu  fedora.py  model.py  package_generator.py  packages.py  systemd.py  tezos_setup_wizard.py  tezos_voting_wizard.py  ubuntu.py  wizard_structure.py
docker/package/defaults/: tezos-accuser.conf  tezos-baker.conf  tezos-baking-custom.conf  tezos-baking.conf  tezos-node.conf  tezos-rollup-node.conf
docker/package/scripts/: build-binary.sh  tezos-accuser-start  tezos-baker-start  tezos-baking-custom-reset  tezos-baking-prestart  tezos-rollup-node-start  udev-rules  update-binaries-list.py
docker/src/: package.py
docker/src/package/: Dockerfile-fedora  Dockerfile-ubuntu  meta.py  model.py  packages.py
docker/tests/: Dockerfile-fedora-test  Dockerfile-ubuntu-test  binaries.json
docker/tests/scripts/: test-fedora-binaries.sh  test-ubuntu-binaries.sh
(+34 files in other folders)
